# web-rclea

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  open.txt  pyproject.toml
data/: elements.json  isotopes.json
extraction/: audit_all_sheets.py  build_data.py  extract_lookup_tables.py  inspect_extra.py  inspect_remaining.py  remaining_dump.txt
src/rclea_cli/: __init__.py  main.py
src/rclea_cli/commands/: _shared.py  assess.py  isotopes.py  rsgv.py  scenarios.py  tutorial.py  worst_case.py
src/rclea_cli/templates/: scenario.example.yaml
src/rclea_core/: assessment.py  loader.py  pathways.py
tests/python/: conftest.py  test_analysis.py  test_extensibility.py  test_loader.py  test_overrides.py  test_pathways.py  test_radon_modes.py  test_tutorial_fences.py
tutorials/: 01-contaminated-land.md  03-exposure-pathways.md  04-first-assessment.md  05-interpreting-results.md  07-advanced-workflows.md
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/public/: rclea_core_manifest.json  rclea_data_manifest.json  rclea_tutorials_manifest.json
web/public/rclea_core/: __init__.py  analysis.py  disclaimer.py  models.py  tutorials.py
web/public/rclea_data/: _raw_dump.json  buildings.json  constants.json  consumption.json  pathways.json  receptors.json  scenarios.json
web/public/rclea_tutorials/: 02-radiation-basics.md  06-legislation-stakeholders.md
web/src/: App.tsx  index.css
web/src/components/: AssessmentForm.tsx  CustomScenarioPanel.tsx  DisclaimerBanner.tsx  DisclaimerModal.tsx  GlossaryPanel.tsx  GuidelinesPanel.tsx  InfoTooltip.tsx  InteractiveStep.tsx  OverridesEditor.tsx  RadonModeControl.tsx  ResultsPanel.tsx  TutorialView.tsx  WorstCasePanel.tsx
web/src/pyodide/: api.ts  loader.ts
