[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rclea"
version = "0.1.0"
description = "RCLEA — Radioactively Contaminated Land Exposure Assessment (educational remake)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "RCLEA educational remake" }]
keywords = ["radiation", "contaminated-land", "dose-assessment", "RCLEA", "Part-2A", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Education",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.12",
    "rich>=13.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.scripts]
rclea = "rclea_cli.main:app"

[project.urls]
Homepage = "https://github.com/rizgarmella/web-rclea"
Documentation = "https://github.com/rizgarmella/web-rclea/blob/main/README.md"

[tool.hatch.build.targets.wheel]
packages = ["src/rclea_core", "src/rclea_cli"]
sources = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"data" = "rclea_core/data"
"tutorials" = "rclea_core/tutorials"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
